# IoTferme

./: .env.example  .gitignore  Makefile  README.md
arduino_alt/: README.md
edge-device-stack/: .env.example  Makefile  README.md
edge-device-stack/edge-agent/: .env.example  README.md  pyproject.toml
edge-device-stack/edge-agent/src/: backlog.py  commands.py  espnow_router.py  health.py  main.py  mqtt_client.py  schemas.py  serial_bridge.py  settings.py  storage.py
edge-device-stack/edge-agent/src/api/: __init__.py  routes_buffer.py  routes_cmd.py  routes_diag.py  routes_status.py
edge-device-stack/edge-agent/src/utils/: cbor_codec.py  cobs.py  logging.py  time_sync.py
edge-device-stack/edge-agent/static/css/: app.css
edge-device-stack/edge-agent/static/js/: app.js
edge-device-stack/edge-agent/systemd/: edge-agent.service.tmpl
edge-device-stack/edge-agent/templates/: base.html  buffer.html  commands.html  diag.html  status.html
edge-device-stack/edge-agent/tests/: conftest.py  test_backlog.py  test_commands.py  test_storage.py
edge-device-stack/edge-agent/udev/: 99-edge-gateway.rules
edge-device-stack/esp32/common/: CMakeLists.txt
edge-device-stack/esp32/common/include/: config.h  crc.h  espnow_init.h  frames.h  nvs_store.h  pins.h  time_sync.h  wifi_init.h
edge-device-stack/esp32/common/src/: crc.c  espnow_init.c  frames.c  nvs_store.c  time_sync.c  wifi_init.c
iot-streamer/: .env.example  .eslintrc.cjs  package-lock.json  package.json
ml-engine/: .env.example  openapi.yaml  requirements.txt
mosquitto/: aclfile  mosquitto.conf
plantuml/: container.puml  er_model.puml
scripts/: backup.sh  bootstrap_vps.sh  restore.sh  seed_dev.sh  simulate_mqtt.js  ubuntu_install.sh
systemd/: iot-streamer.service  (+2 more)
(+211 files in other folders)
